
Open the Advancements Window to see the goals set out for you in this pack (Default key "L"). The long term goals in the Floramancer section mostly cannot be attempted right off the bat. First you'll have to make progress through the normal Botania progression (with added difficulty) following either the Botania advancements or the Lexica Botania.

---------------------------------------------------------------------

1.0.1

Changelog will begin after version 1.0.0 is released
