@@ -2,7 +2,7 @@ Lava is infinite in the Nether below the level of the lava lakes.
 The Advancement page will provide some guidance through the pack. You can find it in the escape menu or by pressing "L" (default).
 Some recipes are slightly modified. Check JEI or the Lexica Botania to find the new recipes.
 Use F7 to see the light levels on the ground and F9 to see the chunk borders.
-If you die a Death Compass will spawn in your inventory this will point you to the direction of your grave.
+If you die, a Death Compass will spawn in your inventory. This will point you to the direction of your grave.
 Shift/Sneak on your grave to retrieve your items.
 Craft an Antique Atlas before you go exploring so you don't get lost.
 Incorporeal adds lots of utilities for expanding your Corporea system.
@@ -11,9 +11,15 @@ Use minecarts to transport large amounts of mana quickly!
 Saddles can be crafted and have many possible upgrades.
 You can move chests and animals by using Carry On to pick them up.
 You can jump over fences, but mobs cannot!
-This pack doesn't have backpacks, but you can right click shulker boxes in your inventory with items to add the items to the box.
+This pack doesn't have backpacks, but both barrels and shulker boxes keep their inventory when broken.
 The rare, tower-like structures in The End contain Enderman spawners! Move them back to the overworld for easier ender pearl farming.
 Certain structures in jungle and birch forest biomes contain creeper spawners. Use them for an easy source of gunpowder.
 Cobwebs can be destroyed easily with a torch.
 Tired of trampling your crops? Enchant your boots with Feather Falling!
 Use the Redstone PCB for fine-grained control over how your redstone connects.
+Waystones generate in villages and are free to use, though they cannot be broken.
+Fortune ores drop experience orbs, even when not broken by a player. You can use this to automate the rosa arcana.
+Hostile mobs drop experience orbs, even when not killed by a player. You can use this to automate the rosa arcana.
+The invisibility status effect now ends if you make an attack or are discovered. Be sure to sneak when moving past mobs!
+Falling into the void won't kill you.
+Caves are enormous and largely interconnected. Leave a trail of breadcrumbs so you can find your way back out!
