@@ -1,9 +1,16 @@
 
-Open the Advancements Window to see the goals set out for you in this pack (Default key "L"). The long term goals in the Floramancer section mostly cannot be attempted right off the bat. First you'll have to make progress through the normal Botania progression (with added difficulty) following either the Botania advancements or the Lexica Botania.
+In this pack, your goal is to fully automate every generating flower in Botania, despite the fact that all generating flora suffer passive decay. You'll need to produce one thousand mana pools worth of mana with every flower, so plan to have a lot of flowers running at all times. You can track your progress towards these goals in the Advancements Window (Default key "L").
+
+Those are long term goals though. To start off, you'll want to start gathering your basic vanilla resources and mystical flowers. Read the Lexica Botania and follow the Botania advancements to start progressing through the mod. Some recipes are tweaked, but if you've played with Botania before, the basic progression is unchanged. Making a fully automatic mana generation setup is a lot harder in this pack, due to the passive flower decay, but it's entirely possible to do even before unlocking Elven technology! You may need to be more frugal with your mana though, at least to start with.
+
+Underneath the Changelogs, you can also find some Tips, Tricks, and Tweaks. Many of these are the same tips you see on your loading screen, but better organized and with some additional explanation. Use them to discover features of the pack you may not be aware of, to help you on your journey!
 
 ---------------------------------------------------------------------
 
-1.0.1
+§n1.0.0§r
 
-Changelog will begin after version 1.0.0 is released
+Initial pack release (incoming)! Changelog tracking will begin after version 1.0.0 is released.
 
+---------------------------------------------------------------------
+
+§nTips, Tricks, and Tweaks§r
